--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ header {
 
 /* HEADER DESKTOP */
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 992px) {
   #navBar {
     padding: 0 150px;
   }
@@ -239,11 +239,11 @@ main h3 {
 
 @media screen and (min-width: 768px) {
   #trendingTitle {
-    position: relative;
-    left: 9%;
+    padding: 0 12%;
   }
 
   #trendingSection {
+    padding: 50px 0;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -256,9 +256,62 @@ main h3 {
 
 /* TRENDING POSTS DESKTOP */
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 992px) {
   .trendingPost {
-    width: 20%;
-    padding: 0px 5%;
+    width: 25%;
+    padding: 0px 20px;
+  }
+}
+
+/* RELATED NAV SECTION MOBILE */
+#relatedNavSection {
+  margin: 0 15px;
+}
+
+#relatedNavSection h3 {
+  transform: translateX(2px);
+  margin-bottom: 18px;
+  padding: 0;
+  font-weight: 900;
+  letter-spacing: 0.07rem;
+}
+
+#relatedNavSection nav {
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #e6e7e7;
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+}
+
+#relatedNavSection nav a {
+  margin: 0px 7px 7px 0;
+  padding: 10px 10px;
+  font-weight: 600;
+  font-size: 0.7rem;
+  border: 0.5px solid #e6e7e7;
+  text-decoration: none;
+  color: #b1b1b1;
+}
+
+#relatedNavSection div {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#relatedNavSection div a {
+  padding: 0 30px 10px 0;
+  font-weight: 600;
+  font-size: 0.7rem;
+  text-decoration: none;
+  color: #b1b1b1;
+}
+
+/* RELATED NAV SECTION TABLET */
+@media screen and (min-width: 768px) {
+  #relatedNavSection {
+    margin: 0 5%;
   }
 }
