add all the related posts, need to fix  the bookmark and the posts footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,7 +326,10 @@ main h3 {
 
 .relatedPost {
   margin: 0;
+  margin-bottom: 50px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .relatedPostDescription h4 {
